Add refactor